# tsmean

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: UCR_CONFIG.md  api.rst  conf.py  index.rst  quickstart.ipynb  quickstart.md
notebooks/: demo.ipynb
src/tsmean/: __init__.py  convergence.py  dataset.py  mean_algorithm.py  optimizer.py  schedule.py  visualization.py  warping_distance.py
tests/: test_mean_algorithm.py  test_optimizer.py  test_schedules.py  test_warping_distance.py
