[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsmean"
version = "0.1.0"
description = "Time Series Mean (Averaging) under Dynamic Time Warping"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Schultz", email = "dasch85@gmail.com"}
]
keywords = ["Dynamic Time Warping", "Fréchet Mean", "Time Series Averaging", "Subgradient Methods"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "numba>=0.57.0",
    "matplotlib>=3.7.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com/issues"

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.0.0",
    "PyQt5>=5.15.11",
]

dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsmean"]

[tool.hatch.build.targets.sdist]
only-include = ["src/tsmean", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"